--- a/Gui-Vln-2016/mainwindow.ui
+++ b/Gui-Vln-2016/mainwindow.ui
@@ -284,6 +284,18 @@
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
            <widget class="QComboBox" name="comboBoxComputer">
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
+            <property name="statusTip">
+             <string/>
+            </property>
+            <property name="accessibleDescription">
+             <string>bla</string>
+            </property>
+            <property name="inputMethodHints">
+             <set>Qt::ImhNone</set>
+            </property>
             <property name="currentText">
              <string/>
             </property>
@@ -307,6 +319,9 @@
         </item>
         <item>
          <widget class="QTableWidget" name="tableWidget_2">
+          <property name="statusTip">
+           <string extracomment="bls"/>
+          </property>
           <property name="editTriggers">
            <set>QAbstractItemView::NoEditTriggers</set>
           </property>
