--- a/Gui-Vln-2016/resorces.qrc
+++ b/Gui-Vln-2016/resorces.qrc
@@ -4,4 +4,11 @@
         <file>Pictures/datBase.png</file>
         <file>Pictures/cornerIcon.png</file>
     </qresource>
+    <qresource prefix="/sounds">
+        <file>sounds/dico_house.MP3</file>
+        <file>sounds/SpaceDrifter.wav</file>
+    </qresource>
+    <qresource prefix="/">
+        <file>sounds/dico_house.MP3</file>
+    </qresource>
 </RCC>
