--- a/Gui-Vln-2016/login.ui
+++ b/Gui-Vln-2016/login.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Login</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="resorces.qrc">
+    <normaloff>:/Icons/Pictures/cornerIcon.png</normaloff>:/Icons/Pictures/cornerIcon.png</iconset>
   </property>
   <widget class="QLineEdit" name="lineEditUser">
    <property name="geometry">
@@ -86,6 +90,8 @@
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="resorces.qrc"/>
+ </resources>
  <connections/>
 </ui>
