--- a/Gui-Vln-2016/registeruser.ui
+++ b/Gui-Vln-2016/registeruser.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Register</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="resorces.qrc">
+    <normaloff>:/Icons/Pictures/cornerIcon.png</normaloff>:/Icons/Pictures/cornerIcon.png</iconset>
   </property>
   <widget class="QPushButton" name="pushButtonRegister">
    <property name="geometry">
@@ -73,6 +77,8 @@
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="resorces.qrc"/>
+ </resources>
  <connections/>
 </ui>
