--- a/Gui-Vln-2016/mainwindow.ui
+++ b/Gui-Vln-2016/mainwindow.ui
@@ -66,7 +66,7 @@
 }</string>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tabScientist">
        <attribute name="title">
@@ -98,6 +98,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonAscending">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="styleSheet">
              <string notr="true">QAbstractButton
 {
@@ -111,6 +114,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonDescending">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="styleSheet">
              <string notr="true">QAbstractButton
 {
@@ -353,6 +359,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonAscendingComputer">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="styleSheet">
              <string notr="true">QAbstractButton
 {
@@ -366,6 +375,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonDescendingComputer">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="styleSheet">
              <string notr="true">QAbstractButton
 {
@@ -557,6 +569,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonAscendingConnection">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="styleSheet">
              <string notr="true">QAbstractButton
 {
@@ -570,6 +585,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonDesendingConnection">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="styleSheet">
              <string notr="true">QAbstractButton
 {
@@ -743,7 +761,7 @@
      <x>0</x>
      <y>0</y>
      <width>1067</width>
-     <height>26</height>
+     <height>17</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
