--- a/Gui-Vln-2016/resorces.qrc
+++ b/Gui-Vln-2016/resorces.qrc
@@ -3,6 +3,7 @@
         <file>Pictures/icon.png</file>
         <file>Pictures/datBase.png</file>
         <file>Pictures/cornerIcon.png</file>
+        <file>Pictures/noPhotoAvailable.png</file>
     </qresource>
     <qresource prefix="/sounds">
         <file>sounds/dico_house.MP3</file>
