--- a/Gui-Vln-2016/editscientist.ui
+++ b/Gui-Vln-2016/editscientist.ui
@@ -96,8 +96,14 @@
          <height>0</height>
         </size>
        </property>
+       <property name="maximumSize">
+        <size>
+         <width>170</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="text">
-        <string>Gender</string>
+        <string> Gender</string>
        </property>
       </widget>
      </item>
